Add entity model and plugin fixes